fix request permissions on iPhone (needs to request every time)

--- a/src/pages/home/sections/footer/Footer.scss
+++ b/src/pages/home/sections/footer/Footer.scss
@@ -46,13 +46,15 @@
                 width: calc(100% - $left);
             }
 
+            .tilt-wrapper {
+                margin-bottom: 15%;
+            }
+
             .tilt {
                 display: flex;
                 flex-direction: column;
                 align-items: center;
                 gap: 4px;
-
-                margin-bottom: 15%;
 
                 font-style: italic;
                 font-size: 14px;
